<resources>
    <string name="app_name">Ridev Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Ride details</string>
    <string name="menu_slideshow">Total Earn</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Refer and Earn</string>
    <string name="menu_send">FAQ</string>
</resources>
